# edna-formation

./: .env_sample  .gitignore  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
colibri-docs/: colibri-manifest.json  index.html
ingestion/: pipeline.py
resources/: athletes.csv  competitions.csv  results.csv  sports.csv
transformation/: .user.yml  dbt_project.yml  profiles.yml
transformation/models/marts/: _marts_models.yml  dim_athletes.sql  dim_competitions.sql  fct_results.sql
transformation/models/reporting/: _reporting_models.yml  rpt_results.sql
transformation/models/staging/: _staging_models.yml  stg_athletes.sql  stg_competitions.sql  stg_results.sql  stg_sports.sql
visualization/: docker-compose.yml
visualization/docker/: Dockerfile  superset_config.py
