[project]
name = "edna-formation"
version = "0.1.0"
description = "Pipeline de données pédagogique — Jeux Olympiques"
requires-python = "~=3.12"

dependencies = [
    "dbt-duckdb>=1.8.0",
    "duckdb>=1.5.1",
    "pyarrow>=15.0.0",
    "dbt-colibri>=0.1.0",
]

[tool.uv]
link-mode = "copy"
dev-dependencies = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
